k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: devops-service
  namespace: prod

spec:
  type: ClusterIP

  selector:
    app: devops-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 4001
